# DarwinKit

./: .bazelrc  .gitmodules  BUILD  Cargo.toml  MODULE.bazel  README.md  WORKSPACE  arm64e-kernel.json  load_kext.sh  main.cc
arm64/: arm64.cc  arm64.h  assemble.cc  assemble.h  disassemble.cc  disassemble.h  disassembler_arm64.cc  disassembler_arm64.h  isa_arm64.cc  isa_arm64.h  patch_finder_arm64.cc  patch_finder_arm64.h
corpus/: iso.dmg.iso
darwinkit/: api.c  api.h  api_util.cc  api_util.h  arch.cc  arch.h  binary_format.h  dictionary.h  disassembler.cc  disassembler.h  dwarf_v5.h  hook.cc  hook.h  instruction.h  log.h  mach-o.h  macho.cc  macho.h  map.hpp  pac.cc  pac.h  pair.h  patcher.cc  patcher.h  payload.cc  payload.h  section.h  segment.h  strparse.cc  strparse.h  symbol.h  symbol_table.cc  symbol_table.h  types.h  vector.h  zalloc.h
fuzz/kernel/: Cargo.toml  allocator.rs  arm64e-kernel.json  libafl_fuzzer.rs  x86_64-kernel.json
fuzz/user/: Cargo.toml  libafl_fuzzer.rs
kernel/: backtrace.cc  backtrace.h  basic_block.h  control_flow_graph.h  coverage.c  coverage.cc  coverage.h  darwin_kit.cc  darwin_kit.h  device_tree.cc  device_tree.h  dwarf.cc  dwarf.h  file_io.cc  file_io.h  fuzzer.cc  fuzzer.h  gdb_stub.h  iokit.cc  iokit.h  kdk.cc  kern.c  kern.h  kernel.cc  kernel.h  kernel_darwin_kit.cc  kernel_darwin_kit.h  kernel_darwin_kit_user_client.cc  kernel_darwin_kit_user_client.h  kernel_macho.cc  kernel_macho.h  kernel_patcher.cc  kernel_patcher.h  kext.cc  kext.h  kext_macho.cc  kext_macho.h  libafl_fuzzer.h  libafl_fuzzer.rs  plugin.cc  (+5 more)
tests/: macho_test.cc
tools/: gdb_symbols.py  kernel.release.vmapple.h  lldb_symbols.py  target_22G120.lldb  target_25C5037j.lldb  usbflux.sh
tools/img4/: Makefile  img4parse.c  libimg4.dylib
user/: code_signature.cc  crawler.h  crawler.mm  cycript_runner.mm  darwinkit_tool.cc  disk_image.h  disk_image.mm  dwarf.cc  dwarf.h  dyld.cc  dyld.h  emu_fuzzer.cc  emu_fuzzer.h  emulator.h  fuzzer.cc  fuzzer.h  fuzzer.mm  hypervisor.cc  hypervisor.h  injector.cc  injector.h  kdk.cc  kern_user.c  kern_user.h  kernel.cc  kernel.h  kernel_macho.cc  kernel_macho.h  kext_macho.cc  kext_macho.h  libafl_fuzzer.h  library.h  loader.cc  loader.h  macho_userspace.cc  macho_userspace.h  main.cc  objc.cc  objc.h  swift.cc  (+9 more)
user/lib/: crawler.h
x86_64/: disassembler_x86_64.cc  disassembler_x86_64.h  isa_x86_64.cc  isa_x86_64.h  patch_finder_x86_64.cc  patch_finder_x86_64.h  reg_x86_64.cc  x86_64.cc  x86_64.h
