[package]
name = "libafl_fuzzer_no_std"
version = "0.15.4"
authors = [
  "Andrea Fioraldi <andreafioraldi@gmail.com>",
  "Dominik Maier <domenukk@gmail.com>",
]
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = "s"
debug = false

[dependencies]
libafl = { default-features = false, path = "LibAFL/crates/libafl" }
libafl_bolts = { default-features = false, path = "LibAFL/crates/libafl_bolts" }
log = { version = "0.4.22", features = ["release_max_level_info"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.159"

[lib]
name = "libafl_fuzzer_no_std_lib"
crate-type = ["staticlib"]
path = "kernel/libafl_fuzzer.rs"
